maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:64: error: forward reference extends over definition of variable indice
  setIndication(xSortie,ySortie,indice)
                                ^